applications/amity/influxdb/overlays/use1/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  namespace: amity-influx
spec:
  serviceName: influxdb
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: influxdb
          image: influxdb:1.8
          args:
            - "-config"
            - "/etc/influxdb/influxdb.conf"
          ports:
            - containerPort: 8086
              name: http
          volumeMounts:
            - name: config
              mountPath: /etc/influxdb/influxdb.conf
              subPath: influxdb.conf
            - name: tls
              mountPath: /etc/ssl/influxdb
              readOnly: true
            - name: data
              mountPath: /var/lib/influxdb
      volumes:
        - name: config
          configMap:
            name: influxdb-config
        - name: tls
          secret:
            secretName: influxdb-tls-secret
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 12Gi
