applications/amity/influxdb/overlays/use1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: amity-influx
spec:
  type: LoadBalancer
  loadBalancerIP: 10.1.50.175
  ports:
    - port: 8086
      name: http
  selector:
    app: influxdb
