applications/amity/influxdb/overlays/use1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  namespace: amity-influx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production-amity
spec:
  ingressClassName: traefik
  rules:
    - host: influx-use1.amityrust.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: influxdb
                port:
                  number: 8086
  tls:
    - hosts:
        - influx-use1.amityrust.com
      secretName: influxdb-tls-secret
